2008-09-30 1.82 Tom Insam  <tom@jerakeen.org>
  * Latest LWP-UserAgent is pickier about what you pass it as a URI - fixed.

2008-06-19 1.81 Tom Insam  <tom@jerakeen.org>
  * fix changes for the Register title
  * clearer licensing

2008-06-19 1.80 Tom Insam  <tom@jerakeen.org>
  * Twitter support
  * Google calculator support
  * Too many irritating corner-case bugfixes to list.
  * Claim that we don't do gzip in some cases, to avoid evil

2007-04-21 1.70 Tom Insam  <tom@jerakeen.org>
  * Added special case for Helsingin Sanomat URLs.
  * Supressed warnings if imgsize can't get an image size (from Dagfinn Ilmari Mannsaker)
  * Fixed some more nagging unicode issues. Bah, unicode.
  * Send a real user-agent, to prevent people that hard-code a block of the default Perl useragent from blocking us.

2006-05-18 1.62 Tom Insam  <tom@jerakeen.org>

  * character set support that actually _works_ - we also try utf-8
    first always, because people lie.
  * Fix for servers that don't respect the Range header.

2005-07-21 1.61 Tom Insam  <tom@jerakeen.org>

  * Fix tiny test breakage
  * Better charset support

2004-09-23 1.60 Tom Insam  <tom@jerakeen.org>

  * Added limited character set support. It mostly sucks, but
    less than it did before.


2004-08-13 1.50 Tom Insam  <tom@jerakeen.org>

  * Added quick special case for iTMS urls.
  * Bumped version to 1.0, I quite like this code now.


2004-05-06 0.50 Tom Insam  <tom@jerakeen.org>
  * 0.5 Release
  * Use File::Type to detech mime types and hand off to sub-modules
  * Use Module::Pluggable to discover sub-modules
  * Add Image, MP3 and PDF naming modules


2004-03-16 0.30 Tom Insam  <tom@jerakeen.org>
  * 0.3 Release (Revision 643)
  * Don't run tests without a net connection
  * More special cases.
  * Variable header size downloading for pathological cases
  * Much better whitespace trimming


2004-01-17 0.10 Tom Insam  <tom@jerakeen.org>
  * 0.1 Release. It doesn't suck, much.
  
  