@@ -12,7 +12,7 @@ my $s = IO::Socket::INET->new(
 
 if ($s) {
   close($s);
-  plan tests => 1;
+  plan tests => 2;
 } else {
   plan skip_all => "no net connection available";
   exit;
@@ -27,4 +27,6 @@ ok(
   title('http://theregister.co.uk/content/6/34549.html') =~ /lack of technology may harm your prospects/,
   "got register title");
 
-
+ok(
+  title('http://twitter.com/al3x/status/1039647490') eq 'twitter - Arianna Huffington: not a good saleswoman for blogging.',
+  "got Twitter status");
