@@ -1,3 +1,9 @@
+2009-07-27 1.84 Tom Insam <tom@jerakeen.org>
+  * Spotify titling support from https://rt.cpan.org/Public/Bug/Display.html?id=48231
+  
+2008-10-18 1.83 Paul Mison <cpan@husk.org>
+  * Work around a change in Twitter HTML
+
 2008-09-30 1.82 Tom Insam  <tom@jerakeen.org>
   * Latest LWP-UserAgent is pickier about what you pass it as a URI - fixed.
 
